# MM

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
MM/: main.py  old.py  old_main.py  test.py  websocketconnector.py
MM/args/: __init__.py
MM/cfg/: __init__.py  cfg_classes.py  example_cfg.toml  starknet_platform_cfg.py
MM/instruments/: instrument.py  starknet.py
MM/logs/: custom_json_encoder.py
MM/marketmaking/: enums.py  market.py  marketmaker.py  order.py  pocmmmodel.py  state.py  statemarket.py  transaction_builder.py  waccount.py
MM/marketmaking/marketmakers/: __init__.py  marketmaker.py  simple_marketmaker.py
MM/marketmaking/orderchain/: order_chain.py
MM/marketmaking/reconciling/: __init__.py  always_replace_reconciler.py  bounded_reconciler.py  order_reconciler.py  tolerance_reconciler.py
MM/markets/: __init__.py  ekubo_clmm_market.py  ekubo_limit_order_market.py  ekubo_market.py  market.py  remus_market.py
MM/markets/legacy/: market.py
MM/markets/offchain_markets/: paradex_market.py
MM/markets/starknet_markets/: ekubo_clmm_market.py  ekubo_limit_order_market.py  (+1 more)
MM/monitoring/: metrics.py
MM/oracles/: simple_prices.py
MM/state/: account_state.py  state.py  state_fetcher.py
MM/tx_builders/: __init__.py  bundling_tx_builder.py  sequential_tx_builder.py  transaction_builder.py  tx_builder.py
MM/venues/: remus.py
strats/: ekubo_eth_usdc.toml  ekubo_strk_usdc.toml  ekubo_wbtc_dog.toml  ekubo_wbtc_usdc.toml  remus_eth_usdc.toml  remus_strk_usdc.toml  remus_wbtc_dog.toml  remus_wbtc_usdc.toml
(+19 files in other folders)
