[project]
name = "mm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "starknet-py==0.27.0",
    "dotenv==0.9.9",
    "pydantic>=2.11.5",
    "tomli>=2.2.1",
    "prometheus-client>=0.22.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "types-requests>=2.32.0.20250602",
]

[tool.ruff]
# TODO: Once there's time, do a proper ruff setup
extend-exclude = ['test.py', "*/legacy/*"]

[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
exclude = 'test|websocketconnector\.py|.*/legacy(/.*)?'
